# IZ2

./: Makefile  README.md  coverage.info
.github/workflows/: ci.yml
linters/: run.sh
project/: CMakeLists.txt  main.c
project/email_lib/: CMakeLists.txt  email.c  email.h
project/tests/: CMakeLists.txt  test_email.cpp
project/utils/: CMakeLists.txt  utils.c  utils.h
report/: index-sort-f.html  index-sort-l.html  index.html
report/email_lib/: email.c.func-sort-c.html  email.c.func.html  email.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
report/utils/: index-sort-f.html  index-sort-l.html  index.html  utils.c.func-sort-c.html  utils.c.func.html  utils.c.gcov.html
